--- a/src/app/Dashboards/main/main.component.html
+++ b/src/app/Dashboards/main/main.component.html
@@ -32,13 +32,21 @@
               </div>
             </div>
         <div class="row">
-              <div class="col-lg col-md-6 col-sm-6 mb-4  animated zoomInDown slow">
+              <div class="col-lg col-md-6 col-sm-6 mb-4  animated pulse slow">
                <app-card  [cardname]="'Buckets'" [carddata]='56'></app-card>
               </div>
               
             </div>
-       
+            <div class="row">
 
+              <div class="col-lg col-md-4 col-sm-12 mb-4" >
+              <app-piechart></app-piechart>
+              </div>
+
+
+              </div>
+   
+            
              </ng-template >
 
              <ng-template #elseBlock>
