--- a/src/app/Dashboards/services/rdsboard/rdsboard.component.html
+++ b/src/app/Dashboards/services/rdsboard/rdsboard.component.html
@@ -4,4 +4,9 @@
                 <h3 class="page-title">AWS RDS</h3>
               </div>
             </div>
+             <div class="block">
+<app-circle [circlename]="'No of Buckets'" [circledata]='5'></app-circle>
+<app-circle [circlename]="'No of Buckets'" [circledata]='5'></app-circle>
+<app-circle [circlename]="'No of Buckets'" [circledata]='5'></app-circle>
+            </div>
 <app-button [btntitle]="'Back'" routerLink="/main"></app-button>
