--- a/src/app/Dashboards/services/ec2board/ec2board.component.html
+++ b/src/app/Dashboards/services/ec2board/ec2board.component.html
@@ -4,4 +4,10 @@
                 <h3 class="page-title">AWS EC2</h3>
               </div>
             </div>
+
+             <div class="block" style="margin-bottom:80px">
+<app-circle [circlename]="'No of Instances'" [circledata]='5'></app-circle>
+<app-circle [circlename]="'Security Groups'" [circledata]='5'></app-circle>
+<app-circle [circlename]="'No of Buckets'" [circledata]='5'></app-circle>
+            </div>
 <app-button [btntitle]="'Back'" routerLink="/main"></app-button>
