--- a/src/app/Dashboards/services/ec2board/ec2board.component.html
+++ b/src/app/Dashboards/services/ec2board/ec2board.component.html
@@ -11,3 +11,4 @@
 <app-circle [circlename]="'No of Buckets'" [circledata]='5'></app-circle>
             </div>
 <app-button [btntitle]="'Back'" routerLink="/main"></app-button>
+<app-button [btntitle]="'Get servers'" (click)="getservers()"></app-button>
