--- a/src/app/Actions/config/config.component.html
+++ b/src/app/Actions/config/config.component.html
@@ -20,7 +20,7 @@
    
   <div class="button-container">
 
-    <button type="button"  class="button" routerLink="/main"><span>Submit</span></button>
+    <button type="button"  class="button" (click)="setconfig()"><span>Submit</span></button>
 
   </div>
 </form>
