--- a/src/app/Dashboards/services/iamboard/iamboard.component.html
+++ b/src/app/Dashboards/services/iamboard/iamboard.component.html
@@ -9,4 +9,5 @@
 <app-circle [circlename]="'No of Buckets'" [circledata]='5'></app-circle>
 <app-circle [circlename]="'No of Buckets'" [circledata]='5'></app-circle>
             </div>
+<app-button [btntitle]="'Create users'" (click)="getusers()"></app-button>			
 <app-button [btntitle]="'Back'" routerLink="/main"></app-button>
