--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,7 +40,7 @@
                   <i class="fas fa-search"></i>
                 </div>
               </div>
-              <input class="navbar-search form-control" type="text" placeholder="Search for something..." aria-label="Search"> </div>
+              <input class="navbar-search form-control" style="text-align:center"  type="text" placeholder="Search for something..." aria-label="Search"> </div>
           </form>
           <div class="nav-wrapper">
             <ul class="nav flex-column">
@@ -52,19 +52,19 @@
               </li>
               <li class="nav-item">
                 <a routerLink="/S3board" class="nav-link " >
-                   <i class="material-icons">edit</i>
+                   <i class="material-icons">storage</i>
                   <span>AWS S3</span>
                 </a>
               </li>
                <li class="nav-item">
                 <a class="nav-link "  routerLink="/IAMboard">
-                 
+                 <i class="material-icons">supervised_user_circle</i>
                   <span>AWS IAM</span>
                 </a>
               </li>
                <li class="nav-item">
                 <a class="nav-link " routerLink="/EC2board">
-                  
+                  <i class="material-icons">computer</i>
                   <span>AWS EC2</span>
                 </a>
               </li>
