--- a/src/app/Dashboards/main/main.component.html
+++ b/src/app/Dashboards/main/main.component.html
@@ -50,6 +50,6 @@
 
              <ng-template #elseBlock>
 <app-config></app-config>
-<app-button [btntitle]="'Back'" routerLink="/main"></app-button>
 
+</ng-template>
                
