--- a/src/app/Dashboards/services/s3board/s3board.component.html
+++ b/src/app/Dashboards/services/s3board/s3board.component.html
@@ -13,10 +13,14 @@
             </div>
             
 
+
  <div class="block">
    <app-button style="margin:40px;" routerLink="/S3/CreateBucket" [btntitle]="'Create bucket'" ></app-button>
     <app-button style="margin:40px;"  (click)="getbuckets()" [btntitle]="'list bucket'" ></app-button>
      <app-button style="margin:40px;"  [btntitle]="'Back'" routerLink="/main"></app-button>
      
+<ul *ngIf="bucketsObservable | async as buckets else empty">
 
+<li *ngFor="let bucket of buckets">
+  </ul>
    </div>           
