--- a/src/app/components/circle/circle.component.html
+++ b/src/app/components/circle/circle.component.html
@@ -4,12 +4,12 @@
 
     <div class="circle">
       <div  class="text">
-      <b>{{circlename}}</b>
-      <br>
+      <b>{{circlename}}:</b>
+   
 
       <b>{{circledata}}</b>
       </div>
-      <div class="circle--text">These are the number of buckets in your AWS account.</div>
+      <div class="circle--text">{{circledescription}}</div>
 	</div>
 
  
