--- a/src/app/Dashboards/services/s3board/s3board.component.html
+++ b/src/app/Dashboards/services/s3board/s3board.component.html
@@ -15,8 +15,10 @@
 
 <div class="block"><!--BUTTONS-->
    <app-button style="margin:40px;" ngbPopover="Create bucket by giving name" triggers="mouseenter:mouseleave" (click)="openmodal(createbucketcontent)" [btntitle]="'Create bucket'" ></app-button>
+
    <app-button style="margin:40px;"  ngbPopover="List all the buckets in your account" triggers="mouseenter:mouseleave"(click)="openmodal(listbucketcontent);getbuckets()" [btntitle]="'list bucket'" ></app-button>
-    <app-button style="margin:40px;"  ngbPopover="Delete a bucket by providing name" triggers="mouseenter:mouseleave" (click)="getbuckets()" [btntitle]="'Delete bucket'" ></app-button>
+
+    <app-button style="margin:40px;"  ngbPopover="Delete a bucket by providing name" triggers="mouseenter:mouseleave" (click)="openmodal(deletebucketcontent);getbuckets()" [btntitle]="'Delete bucket'" ></app-button>
    <app-button style="margin:40px;"  ngbPopover="Go back to main dashboard" triggers="mouseenter:mouseleave"[btntitle]="'Back'" routerLink="/main"></app-button>
    
 </div>
@@ -59,5 +61,28 @@
    </div>
    <div class="modal-footer">
       <button type="button" class="btn btn-outline-dark" (click)="getbuckets()">list</button>
+   </div>
+</ng-template>
+
+<ng-template #deletebucketcontent let-modal>
+   <div class="modal-header">
+      <h4 class="modal-title" id="modal-basic-title">Delete Buckets</h4>
+      <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+      </button>
+   </div>
+   <div class="modal-body">
+      <mat-selection-list #buckets>
+  <mat-list-option *ngFor="let bucket of bucketlist">
+    {{bucket}}
+  </mat-list-option>
+</mat-selection-list>
+
+<p>
+  Options selected: {{buckets.selectedOptions.selected.length}}
+</p>
+   </div>
+   <div class="modal-footer">
+      <button type="button" class="btn btn-outline-dark" (click)="deletebuckets(buckets.selectedOptions.selected)">Delete</button>
    </div>
 </ng-template>
