--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -97,12 +97,14 @@
                                  <i class="fas fa-search"></i>
                               </div>
                            </div>
-                           <input class="navbar-search form-control" type="text" placeholder="Search for AWS services" aria-label="Search"> 
-                        </div>  <!--not working --AABID BHAI-->
+                           <input class="navbar-search form-control" type="text" placeholder="Search for AWS services/resources" aria-label="Search">  <!-- USE ELASTICSEARCH LATER TO FILTER RESULTS ON DATASET/DATABASE-->
+                        </div>  <!--not working --SOLVE IT-->
                      </form>
                   </nav>
                </div>
                <!-- / .MAIN NAVBAR -->
+
+               <!-- THIS IS WHERE ALL THE COMPONENTS OTHER THAN NAVBAR WILL BE DISPLAYED-->
                <div class="main-content-container container-fluid px-4">
 
                   <router-outlet></router-outlet> <!-- ROUTER -->
