removed pie chart

--- a/src/app/Dashboards/main/main.component.html
+++ b/src/app/Dashboards/main/main.component.html
@@ -39,12 +39,14 @@
       </div>
    </div>
 
+
+   <!-- NOT WORKING WITHOUT STATIC DATA > GET IT WORKING
    <div class="row">
       <div class="col-lg col-md-4 col-sm-12 mb-4" >
          <app-piechart></app-piechart>
       </div>
    </div>
-
+-->
 </ng-template>
 
 
