--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -97,7 +97,7 @@
                                  <i class="fas fa-search"></i>
                               </div>
                            </div>
-                           <input class="navbar-search form-control" type="text" placeholder="Search for AWS services/resources" aria-label="Search">  <!-- USE ELASTICSEARCH LATER TO FILTER RESULTS ON DATASET/DATABASE-->
+                           <input class="navbar-search form-control" type="text" placeholder="Search for AWS services" aria-label="Search">  <!-- USE ELASTICSEARCH LATER TO FILTER RESULTS ON DATASET/DATABASE-->
                         </div>  <!--not working --SOLVE IT-->
                      </form>
                   </nav>
