--- a/src/app/Dashboards/services/s3board/s3board.component.html
+++ b/src/app/Dashboards/services/s3board/s3board.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="block animated jackInTheBox faster"><!--CIRCLES-->
-   <app-circle [circlename]="'No of Buckets'" [circledata]='5' [circledescription]="'These are the number of buckets in your account'"></app-circle>
+   <app-circle [circlename]="'No of Buckets'" [circledata]=bucketcount [circledescription]="'These are the number of buckets in your account'"></app-circle>
    <app-circle style="margin:40px;margin-top:0px" [circlename]="'No of Regions'" [circledata]='3' [circledescription]="'These are the number of regions the buckets are stored in '"></app-circle>
    <app-circle [circlename]="'No of Glacier Vaults'" [circledata]='1' [circledescription]="'These are the number of Glacier Vaults in your account'"></app-circle>
 </div>
