--- a/src/app/Dashboards/services/s3board/s3board.component.html
+++ b/src/app/Dashboards/services/s3board/s3board.component.html
@@ -24,9 +24,9 @@
 </div>
 
 
-
+<h1> Buckets. </h1>
 <ul  *ngFor="let bucket of bucketlist">
-   <li matLine> {{bucket}} </li>
+   <li class="fa fa-folder"> {{bucket}} </li>
    
  </ul>
 
