--- a/src/app/Dashboards/services/cloudwatchboard/cloudwatchboard.component.html
+++ b/src/app/Dashboards/services/cloudwatchboard/cloudwatchboard.component.html
@@ -14,8 +14,8 @@
 
 <div class="block"><!--BUTTONS-->
    <app-button style="margin:40px;" ngbPopover="Create alarms by giving details" triggers="mouseenter:mouseleave" (click)="openCreateAlarm(createalarmcontent)" [btntitle]="'Create Alarm'" ></app-button>
-   <app-button style="margin:40px;"  ngbPopover="Create event by giving details" triggers="mouseenter:mouseleave"(click)="getbuckets()" [btntitle]="'Create event'" ></app-button>
-    <app-button style="margin:40px;"  ngbPopover="view logs by providing data" triggers="mouseenter:mouseleave" (click)="getbuckets()" [btntitle]="'view logs'" ></app-button>
+   <!-- <app-button style="margin:40px;"  ngbPopover="Create event by giving details" triggers="mouseenter:mouseleave"(click)="getbuckets()" [btntitle]="'Create event'" ></app-button>
+    <app-button style="margin:40px;"  ngbPopover="view logs by providing data" triggers="mouseenter:mouseleave" (click)="getbuckets()" [btntitle]="'view logs'" ></app-button> -->
    <app-button style="margin:40px;"  ngbPopover="Go back to main dashboard" triggers="mouseenter:mouseleave"[btntitle]="'Back'" routerLink="/main"></app-button>
    
 </div>
