--- a/src/app/Dashboards/services/ec2board/ec2board.component.html
+++ b/src/app/Dashboards/services/ec2board/ec2board.component.html
@@ -14,8 +14,8 @@
 
 <div class="block"><!--BUTTONS-->
    <app-button style="margin:40px;" ngbPopover="Create servers by entering details" triggers="mouseenter:mouseleave" (click)="openCreateInstance(createinstancecontent)" [btntitle]="'Create instances'" ></app-button>
-   <app-button style="margin:40px;"  ngbPopover="List all the buckets in your account" triggers="mouseenter:mouseleave"(click)="getbuckets()" [btntitle]="'Create Keypair'" ></app-button>
-    <app-button style="margin:40px;"  ngbPopover="Delete a bucket by providing name" triggers="mouseenter:mouseleave" (click)="getbuckets()" [btntitle]="'Stop Instance'" ></app-button>
+   <!-- <app-button style="margin:40px;"  ngbPopover="List all the buckets in your account" triggers="mouseenter:mouseleave"(click)="getbuckets()" [btntitle]="'Create Keypair'" ></app-button>
+    <app-button style="margin:40px;"  ngbPopover="Delete a bucket by providing name" triggers="mouseenter:mouseleave" (click)="getbuckets()" [btntitle]="'Stop Instance'" ></app-button> -->
    <app-button style="margin:40px;"  ngbPopover="Go back to main dashboard" triggers="mouseenter:mouseleave"[btntitle]="'Back'" routerLink="/main"></app-button>
    
 </div>
