--- a/src/app/Dashboards/services/iamboard/iamboard.component.html
+++ b/src/app/Dashboards/services/iamboard/iamboard.component.html
@@ -14,9 +14,9 @@
 
 
 <div class="block"><!--BUTTONS-->
-   <app-button style="margin:40px;" ngbPopover="Create users by giving details" triggers="mouseenter:mouseleave" (click)="openCreateUser(createusercontent)" [btntitle]="'Create users'" ></app-button>
-   <app-button style="margin:40px;"  ngbPopover="Create groups by giving details" triggers="mouseenter:mouseleave"(click)="getbuckets()" [btntitle]="'Create groups'" ></app-button>
-    <app-button style="margin:40px;"  ngbPopover="Delete a user by providing name" triggers="mouseenter:mouseleave" (click)="getbuckets()" [btntitle]="'delete user'" ></app-button>
+   <!-- <app-button style="margin:40px;" ngbPopover="Create users by giving details" triggers="mouseenter:mouseleave" (click)="openCreateUser(createusercontent)" [btntitle]="'Create users'" ></app-button> -->
+   <!-- <app-button style="margin:40px;"  ngbPopover="Create groups by giving details" triggers="mouseenter:mouseleave"(click)="getbuckets()" [btntitle]="'Create groups'" ></app-button>
+    <app-button style="margin:40px;"  ngbPopover="Delete a user by providing name" triggers="mouseenter:mouseleave" (click)="getbuckets()" [btntitle]="'delete user'" ></app-button> -->
    <app-button style="margin:40px;"  ngbPopover="Go back to main dashboard" triggers="mouseenter:mouseleave"[btntitle]="'Back'" routerLink="/main"></app-button>
    
 </div>
