--- a/src/app/Dashboards/services/rdsboard/rdsboard.component.html
+++ b/src/app/Dashboards/services/rdsboard/rdsboard.component.html
@@ -13,8 +13,8 @@
 
 <div class="block"><!--BUTTONS-->
    <app-button style="margin:40px;" ngbPopover="Create Database by giving details" triggers="mouseenter:mouseleave" (click)="openCreateDatabase(createalarmcontent)" [btntitle]="'Create Database'" ></app-button>
-   <app-button style="margin:40px;"  ngbPopover="Create Snapshot by giving details" triggers="mouseenter:mouseleave"(click)="getbuckets()" [btntitle]="'Create Snapshot'" ></app-button>
-    <app-button style="margin:40px;"  ngbPopover="view backups by providing data" triggers="mouseenter:mouseleave" (click)="getbuckets()" [btntitle]="'view backups'" ></app-button>
+   <!-- <app-button style="margin:40px;"  ngbPopover="Create Snapshot by giving details" triggers="mouseenter:mouseleave"(click)="getbuckets()" [btntitle]="'Create Snapshot'" ></app-button>
+    <app-button style="margin:40px;"  ngbPopover="view backups by providing data" triggers="mouseenter:mouseleave" (click)="getbuckets()" [btntitle]="'view backups'" ></app-button> -->
    <app-button style="margin:40px;"  ngbPopover="Go back to main dashboard" triggers="mouseenter:mouseleave"[btntitle]="'Back'" routerLink="/main"></app-button>
    
 </div>
