iam dashboard figures viewed

--- a/src/app/Dashboards/services/iamboard/iamboard.component.html
+++ b/src/app/Dashboards/services/iamboard/iamboard.component.html
@@ -9,7 +9,7 @@
              <div class="block animated jackInTheBox faster"><!--CIRCLES-->
  
  <app-circle [circlename]="'No of Users'" [circledata]=usercount [circledescription]="'These are the number of users in your account'"></app-circle>
-   <app-circle style="margin:40px;margin-top:0px" [circlename]="'No of Groups'" [circledata]='3' [circledescription]="'These are the number of Groups '"></app-circle>
+   <app-circle style="margin:40px;margin-top:0px" [circlename]="'No of Groups'" [circledata]=groupcount [circledescription]="'These are the number of Groups '"></app-circle>
    <app-circle [circlename]="'No of Roles'" [circledata]='1' [circledescription]="'These are the number of Roles in your account'"></app-circle>
 </div>
 
