--- a/src/app/Dashboards/services/iamboard/iamboard.component.html
+++ b/src/app/Dashboards/services/iamboard/iamboard.component.html
@@ -15,7 +15,7 @@
 
 
 <div class="block"><!--BUTTONS-->
-   <!-- <app-button style="margin:40px;" ngbPopover="Create users by giving details" triggers="mouseenter:mouseleave" (click)="openCreateUser(createusercontent)" [btntitle]="'Create users'" ></app-button> -->
+   <app-button style="margin:40px;" ngbPopover="Create users by giving details" triggers="mouseenter:mouseleave" (click)="openmodal(createusercontent)" [btntitle]="'Create users'" ></app-button> -->
    <!-- <app-button style="margin:40px;"  ngbPopover="Create groups by giving details" triggers="mouseenter:mouseleave"(click)="getbuckets()" [btntitle]="'Create groups'" ></app-button>
     <app-button style="margin:40px;"  ngbPopover="Delete a user by providing name" triggers="mouseenter:mouseleave" (click)="getbuckets()" [btntitle]="'delete user'" ></app-button> -->
    <app-button style="margin:40px;"  ngbPopover="Go back to main dashboard" triggers="mouseenter:mouseleave"[btntitle]="'Back'" routerLink="/main"></app-button>
@@ -77,11 +77,11 @@
    <div class="modal-body">
      <div class="container-fluid">
        <div class="row">
-      <div class="col">User name:</div> <div class="col"><input type="text" [(ngModel)]="keypair" name="fname"></div></div>
+      <div class="col">User name:</div> <div class="col"><input type="text" [(ngModel)]="username" name="fname"></div></div>
      
        </div>
    </div>
    <div class="modal-footer">
-      <button type="button" class="btn btn-outline-dark" (click)="createusers()">Create Servers</button>
+      <button type="button" class="btn btn-outline-dark" (click)="createusers()">Create Users</button>
    </div>
 </ng-template>
