--- a/src/app/Dashboards/services/iamboard/iamboard.component.html
+++ b/src/app/Dashboards/services/iamboard/iamboard.component.html
@@ -17,8 +17,8 @@
 <div class="block"><!--BUTTONS-->
    <app-button style="margin:40px;" ngbPopover="Create users by giving details" triggers="mouseenter:mouseleave" (click)="openmodal(createusercontent)" [btntitle]="'Create users'" ></app-button> -->
    <app-button style="margin:40px;"  ngbPopover="Create groups by giving details" triggers="mouseenter:mouseleave"(click)="openmodal(creategroupcontent)" [btntitle]="'Create groups'" ></app-button>
-  <app-button style="margin:40px;"  ngbPopover="Delete a user by providing name" triggers="mouseenter:mouseleave" (click)="openmodal(deleteusercontent)" [btntitle]="'delete user'" ></app-button> 
-  <app-button style="margin:40px;"  ngbPopover="Delete a user by providing name" triggers="mouseenter:mouseleave" (click)="openmodal(deletegroupcontent)" [btntitle]="'delete group'" ></app-button>  
+  <app-button style="margin:40px;"  ngbPopover="Delete a user by providing name" triggers="mouseenter:mouseleave" (click)="openmodal(deleteusercontent)" [btntitle]="'delete users'" ></app-button> 
+  <app-button style="margin:40px;"  ngbPopover="Delete a user by providing name" triggers="mouseenter:mouseleave" (click)="openmodal(deletegroupcontent)" [btntitle]="'delete groups'" ></app-button>  
   <app-button style="margin:40px;"  ngbPopover="Go back to main dashboard" triggers="mouseenter:mouseleave"[btntitle]="'Back'" routerLink="/main"></app-button>
    
 </div>
